--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/main.css">
     <script src="js/validate.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+
 </head>
 <body>
 
     <h3>Registriere dich jetzt bei OpenPetition!</h3>
 
-
+    <div id="outPut"></div>
     <label for="username">User</label>
     <input type="text" name="username" id="username" class="userinput">
 
